# news-aggregator

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: feed.rs  main.rs
src/: lib.rs  main.rs  mastodon.rs  rss.rs
wasm/: Cargo.toml  LICENSE_MIT
